Bug 1713320, ensure idle tasks get run, r=bas a=RyanVM

If IdleTaskManager is suspended and non-idle task _is_run_, nothing seems to guarantee idle tasks get run later.
Calling UpdateCachedIdleDeadline triggers child->parent->child ipc messages if needed and ends up enabling
IdleTaskManager.

Differential Revision: https://phabricator.services.mozilla.com/D116316